--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <br>
     <br>
     <br>
-    <button>Add</button>
-    <button>Subtract</button>
-    <button>Multiply</button>
-    <button>Divide</button>
+    <button onclick="add()">Add</button>
+    <button onclick="subtract()">Subtract</button>
+    <button onclick="multiply()">Multiply</button>
+    <button onclick="divide()">Divide</button>
     <br>
     <br>
     <span id="sum-el">Sum:</span>
